--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,19 +4,17 @@ services:
       context: ./api-gateway
       dockerfile: Dockerfile
     volumes:
-      - ./api-gateway:/app
-      - /app/node_modules
+      - ./api-gateway/src:/app/src  
     ports:
-      - "3000:3000"
+      - "3001:3000"
     command: npm run start:dev
-
+    
   shopping-cart:
     build:
       context: ./shopping-cart
       dockerfile: Dockerfile
     volumes:
-      - ./shopping-cart:/app
-      - /app/node_modules
+      - ./shopping-cart/src:/app/src  # Only mount src directory
     environment:
       HOST: mysql_db
       databasename: user
@@ -26,13 +24,13 @@ services:
       - mysql_db
       - nats
     command: npm run start:dev
+    
   orders:
     build:
       context: ./orders
       dockerfile: Dockerfile
     volumes:
-      - ./orders:/app
-      - /app/node_modules
+      - ./orders/src:/app/src  # Only mount src directory
     environment:
       HOST: mysql_db
       databasename: user
@@ -42,14 +40,13 @@ services:
       - mysql_db
       - nats
     command: npm run start:dev
-
+    
   notifications:
     build:
       context: ./notifications
       dockerfile: Dockerfile
     volumes:
-      - ./notifications:/app
-      - /app/node_modules
+      - ./notifications/src:/app/src  # Only mount src directory
     environment:
       HOST: mysql_db
       databasename: user
@@ -59,14 +56,13 @@ services:
       - mysql_db
       - nats
     command: npm run start:dev
-
+    
   product:
     build:
       context: ./product
       dockerfile: Dockerfile
     volumes:
-      - ./product:/app
-      - /app/node_modules
+      - ./product/src:/app/src  # Only mount src directory
     environment:
       HOST: mysql_db
       databasename: user
@@ -76,14 +72,13 @@ services:
       - mysql_db
       - nats
     command: npm run start:dev
-
+    
   payments:
     build:
       context: ./payments
       dockerfile: Dockerfile
     volumes:
-      - ./payments:/app
-      - /app/node_modules
+      - ./payments/src:/app/src  # Only mount src directory
     environment:
       HOST: mysql_db
       databasename: user
@@ -93,28 +88,29 @@ services:
       - mysql_db
       - nats
     command: npm run start:dev
-
+    
   user:
     build:
       context: ./user-service
       dockerfile: Dockerfile
     volumes:
-      - ./user-service:/app
-      - /app/node_modules
+      - ./user-service/src:/app/src  # Only mount src directory
     environment:
       HOST: mysql_db
       databasename: user
       PASSWORD: password
       DATABASE: mydatabase
+      port: 3306
     depends_on:
       - mysql_db
       - nats
     command: npm run start:dev
-
+    
   nats:
     image: nats:latest
     ports:
       - "4222:4222"
+      
   mysql_db:
     image: mysql:latest
     restart: always
