--- a/notifications/package.json
+++ b/notifications/package.json
@@ -29,6 +29,7 @@
     "@sendgrid/mail": "^8.1.5",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.2",
+    "handlebars": "^4.7.8",
     "mysql2": "^3.14.3",
     "nats": "^2.29.3",
     "reflect-metadata": "^0.2.2",
